welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:11: error: value leveBrosse is not a member of Unit
possible cause: maybe a semicolon is missing before `value leveBrosse'?
  }leveBrosse()}
   ^